[gd_scene load_steps=4 format=2]

[ext_resource path="res://Project/Resources/Fonts/Epilepsy Sans/Resource/EpilepsySansBold.tres" type="DynamicFont" id=1]
[ext_resource path="res://Project/UI/Screens/OptionsMenu/OptionsMenu.gd" type="Script" id=2]
[ext_resource path="res://Project/Resources/Themes/MainTheme.tres" type="Theme" id=3]

[node name="OptionsMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="MainMarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="MainMarginContainer"]
margin_right = 512.0
margin_bottom = 290.0
color = Color( 0.0941176, 0.0784314, 0.168627, 0.509804 )

[node name="MarginContainer" type="MarginContainer" parent="MainMarginContainer"]
margin_right = 109.0
margin_bottom = 148.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_top = 60
custom_constants/margin_left = 25

[node name="ContentVBoxContainer" type="VBoxContainer" parent="MainMarginContainer/MarginContainer"]
margin_left = 25.0
margin_top = 60.0
margin_right = 109.0
margin_bottom = 148.0
size_flags_horizontal = 0
size_flags_vertical = 8
custom_constants/separation = 30

[node name="HeaderLabel" type="Label" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer"]
margin_right = 84.0
margin_bottom = 26.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
text = "options"

[node name="OptionButtonsVBoxContainer" type="VBoxContainer" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer"]
margin_top = 56.0
margin_right = 42.0
margin_bottom = 88.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SoundButton" type="Button" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer/OptionButtonsVBoxContainer"]
visible = false
margin_right = 48.0
margin_bottom = 14.0
focus_neighbour_top = NodePath("../ExitButton")
disabled = true
text = "sound"
align = 0

[node name="VideoButton" type="Button" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer/OptionButtonsVBoxContainer"]
visible = false
margin_right = 48.0
margin_bottom = 14.0
disabled = true
text = "Видео"
align = 0

[node name="LanguageButton" type="Button" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer/OptionButtonsVBoxContainer"]
visible = false
margin_right = 48.0
margin_bottom = 14.0
disabled = true
text = "language"
align = 0

[node name="ControlsButton" type="Button" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer/OptionButtonsVBoxContainer"]
visible = false
margin_right = 48.0
margin_bottom = 14.0
disabled = true
text = "controls"
align = 0

[node name="SpecialOptionButton" type="Button" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer/OptionButtonsVBoxContainer"]
margin_right = 42.0
margin_bottom = 14.0
text = "special"
align = 0

[node name="ExitButton" type="Button" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer/OptionButtonsVBoxContainer"]
margin_top = 18.0
margin_right = 42.0
margin_bottom = 32.0
focus_neighbour_bottom = NodePath("../SoundButton")
text = "exit"
align = 0
